RESOLVED FIXED227357
CSS parser does not handle unpaired surrogates correctly
https://bugs.webkit.org/show_bug.cgi?id=227357
Summary CSS parser does not handle unpaired surrogates correctly
Darin Adler
Reported 2021-06-24 09:47:44 PDT
CSS parser does not handle unpaired surrogates correctly
Attachments
Patch (6.18 KB, patch)
2021-06-24 10:33 PDT, Darin Adler
no flags
Darin Adler
Comment 1 2021-06-24 09:53:12 PDT
We already had a function lying around that does the right thing so this was easy to fix.
Darin Adler
Comment 2 2021-06-24 10:33:48 PDT
EWS
Comment 3 2021-06-24 11:24:07 PDT
Committed r279238 (239123@main): <https://commits.webkit.org/239123@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432188 [details].
Radar WebKit Bug Importer
Comment 4 2021-06-24 11:25:21 PDT
Note You need to log in before you can comment on or make changes to this bug.