CSS parser does not handle unpaired surrogates correctly https://bugs.webkit.org/show_bug.cgi?id=227357

Reviewed by Sam Weinig.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-syntax/input-preprocessing-expected.txt:
Expect tests to pass instead of fail.

Source/WebCore:

Tests: imported/w3c/web-platform-tests/css/css-syntax/input-preprocessing.html

* bindings/js/JSDOMConvertStrings.cpp:
(WebCore::stringToUSVString): Made non-inline to be used outside this file.
* bindings/js/JSDOMConvertStrings.h: Added stringToUSVString.

* css/parser/CSSTokenizer.cpp:
(WebCore::preprocessString): Call stringToUSVString to convert unpaired
surrogates to replacement characters.


Canonical link: https://commits.webkit.org/239123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279238 268f45cc-cd09-0410-ab3c-d52691b4dbfc